# tichu

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/tichu/: card.h  logic.h  view.h
tests/: CMakeLists.txt  cards.cpp  logic.is_bomb.cpp  logic.is_continuous.cpp  logic.is_pair.cpp  logic.is_straight.cpp  logic.is_trio.cpp  views.cpp
